# python-django-tutorial

./: Dockerfile  README.md  requirements.txt
.github/workflows/: django.yml
django-polls/: README.md  setup.cfg
django-polls/polls/: admin.py  models.py  tests.py  views.py
django-polls/polls/migrations/: 0001_initial.py
django-polls/polls/templates/polls/: index.html  results.html
mysite/mysite/: settings.py  urls.py
mysite/polls/: models.py
mysite/polls/templates/polls/: index.html
mysite/templates/admin/: base_site.html
